tests/neg/safemode-1.check
-- Error: tests/neg/safemode-1/safe_2.scala:12:2 -----------------------------------------------------------------------
12 |  println("hello") // error
   |  ^^^^^^^
   |  Cannot refer to method println from safe code since it is tagged @rejectSafe
-- Error: tests/neg/safemode-1/safe_2.scala:14:10 ----------------------------------------------------------------------
14 |  val u = Unsafe() // error
   |          ^^^^^^
   |Cannot refer to class Unsafe from safe code since it is neither compiled in safe mode nor tagged with @assumedSafe
-- Error: tests/neg/safemode-1/safe_2.scala:15:9 -----------------------------------------------------------------------
15 |  Unsafe.foo() // error
   |  ^^^^^^^^^^
   |Cannot refer to method foo from safe code since it is neither compiled in safe mode nor tagged with @assumedSafe
-- Error: tests/neg/safemode-1/safe_2.scala:17:8 -----------------------------------------------------------------------
17 |  scala.Console.out.println("!") // error
   |  ^^^^^^^^^^^^^
   |  Cannot refer to object Console from safe code since it is tagged @rejectSafe
-- Error: tests/neg/safemode-1/safe_2.scala:19:15 ----------------------------------------------------------------------
19 |  val x = caps.unsafe.unsafeErasedValue[String] // error
   |          ^^^^^^^^^^^
   |          Cannot refer to object unsafe from safe code since it is unavailable in safe mode
-- Error: tests/neg/safemode-1/safe_2.scala:21:2 -----------------------------------------------------------------------
21 |  @caps.unsafe.untrackedCaptures var y = 1 // error
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |  Cannot refer to object unsafe from safe code since it is unavailable in safe mode
-- Error: tests/neg/safemode-1/safe_2.scala:22:2 -----------------------------------------------------------------------
22 |  @untrackedCaptures def baz() = () // error
   |  ^^^^^^^^^^^^^^^^^^
   |  Cannot refer to object unsafe from safe code since it is unavailable in safe mode
-- Error: tests/neg/safemode-1/safe_2.scala:26:6 -----------------------------------------------------------------------
26 |    x.a.foo()   // error
   |    ^^^
   |    Cannot refer to value a from safe code since it is tagged @rejectSafe
-- Error: tests/neg/safemode-1/safe_2.scala:28:4 -----------------------------------------------------------------------
28 |    bam()  // error
   |    ^
   |    Cannot refer to value a from safe code since it is tagged @rejectSafe
